--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "cafeteria-management-web",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
     "preview": "vue-cli-service build && serve dist -p 9090",
-
     "dev": "vue-cli-service serve --port 9090",
     "lint": "vue-cli-service lint"
   },
@@ -13,6 +12,7 @@
     "@vue/cli": "^4.3.1",
     "core-js": "^3.6.5",
     "graphql-request": "^3.3.0",
+    "jsonwebtoken": "^8.5.1",
     "vue": "^2.6.12",
     "vue-router": "^3.1.6",
     "vue-toasted": "^1.1.28",
