--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "vue-router": "^3.1.6",
     "vue-toasted": "^1.1.28",
     "vuetify": "^2.2.11",
-    "vuetify-confirm": "^2.0.6"
-  },
-  "devDependencies": {
+    "vuetify-confirm": "^2.0.6",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "~4.5.0"
+  },
+  "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
