--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.1",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
-    "preview": "vue-cli-service build && serve dist -p 9090",
+
     "dev": "vue-cli-service serve --port 9090",
-    "lint": "vue-cli-service lint"
+    "preview": "vue-cli-service build && serve dist -p 9090",
+
+    "deploy": "vue-cli-service build && netlify deploy --prod"
+
   },
   "dependencies": {
     "@vue/cli": "^4.3.1",
