--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "cafeteria-console-web",
   "version": "1.2.4",
   "scripts": {
-
     "dev": "vue-cli-service serve --port 9090",
     "preview": "vue-cli-service build && serve dist -p 9090",
-
     "deploy": "vue-cli-service build && netlify deploy --prod"
-
   },
   "repository": {
     "type": "git",
@@ -25,24 +22,25 @@
   "homepage": "https://github.com/inu-appcenter/cafeteria-console-web#readme",
   "dependencies": {
     "@vue/cli": "^4.3.1",
-    "core-js": "^3.6.5",
-    "graphql-request": "^3.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "vue": "^2.6.12",
-    "vue-router": "^3.1.6",
-    "vue-toasted": "^1.1.28",
-    "vuetify": "^2.2.11",
-    "vuetify-confirm": "^2.0.6",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
+    "graphql-request": "^3.3.0",
+    "jsonwebtoken": "^8.5.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue": "^2.6.12",
     "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-masonry": "^0.12.0",
+    "vue-router": "^3.1.6",
+    "vue-template-compiler": "^2.6.11",
+    "vue-toasted": "^1.1.28",
+    "vuetify": "^2.2.11",
+    "vuetify-confirm": "^2.0.6",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
