--- a/package.json
+++ b/package.json
@@ -22,18 +22,27 @@
   "homepage": "https://github.com/inu-appcenter/cafeteria-console-web#readme",
   "dependencies": {
     "@vue/cli": "^4.3.1",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "graphql-request": "^3.3.0",
+    "prettier": "^2.3.2",
     "jsonwebtoken": "^8.5.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.12",
+    "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-masonry": "^0.12.0",
     "vue-router": "^3.1.6",
