--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/inu-appcenter/cafeteria-console-web#readme",
   "dependencies": {
+    "class-transformer": "^0.4.0",
     "core-js": "^3.6.5",
     "graphql-request": "^3.3.0",
     "jsonwebtoken": "^8.5.1",
