--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^27.0.6",
+    "serve": "^12.0.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.0.5"
