--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass-loader": "^8.0.0",
     "vue": "^2.6.12",
     "vue-masonry": "^0.12.0",
+    "vue-qrcode-reader": "^3.0.3",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "vue-toasted": "^1.1.28",
