--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-toasted": "^1.1.28",
     "vuetify": "^2.2.11",
     "vuetify-confirm": "^2.0.6",
+    "vuetify-datetime-picker": "^2.1.1",
     "vuetify-loader": "^1.3.0"
   },
   "devDependencies": {
