--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.12",
     "vue-masonry": "^0.12.0",
     "vue-qrcode-reader": "^3.0.3",
