--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vuetify": "^2.2.11",
     "vuetify-confirm": "^2.0.6",
     "vuetify-datetime-picker": "^2.1.1",
+    "vuetify-dialog": "^2.0.17",
     "vuetify-loader": "^1.3.0"
   },
   "devDependencies": {
