--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "class-transformer": "^0.4.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.24.0",
     "jsonwebtoken": "^8.5.1",
     "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
