--- a/package.json
+++ b/package.json
@@ -28,45 +28,45 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.24.0",
     "jsonwebtoken": "^8.5.1",
-    "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
     "v-tooltip": "^2.1.3",
     "vue": "^2.6.12",
     "vue-masonry": "^0.12.0",
     "vue-qrcode-reader": "^3.0.4",
     "vue-router": "^3.1.6",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "vue-toasted": "^1.1.28",
     "vuetify": "^2.2.11",
     "vuetify-confirm": "^2.0.6",
     "vuetify-datetime-picker": "^2.1.1",
     "vuetify-dialog": "^2.0.17",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.7.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.4",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli": "^4.3.1",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@vue/cli": "^5.0.1",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-plugin-typescript": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "jest": "^27.0.6",
-    "serve": "^12.0.0",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.10.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "serve": "^13.0.2",
     "ts-jest": "^27.0.4",
     "typescript": "~4.1.5",
-    "vue-cli-plugin-vuetify": "~2.0.5"
+    "vue-cli-plugin-vuetify": "^2.4.6"
   },
   "browserslist": [
     "> 1%",
