--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.12",
     "vue-toasted": "^1.1.28",
-    "vuetify": "^2.2.11",
+    "vuetify": "^2.6.3",
     "vuetify-confirm": "^2.0.6",
     "vuetify-datetime-picker": "^2.1.1",
     "vuetify-dialog": "^2.0.17",
@@ -54,18 +54,23 @@
     "@vue/cli-service": "^5.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "assert": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.5.1",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.10.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
+    "process": "^0.11.10",
+    "sass": "~1.32.13",
+    "sass-loader": "^12.6.0",
     "serve": "^13.0.2",
+    "stream-browserify": "^3.0.0",
     "ts-jest": "^27.0.4",
     "typescript": "~4.1.5",
+    "util": "^0.12.4",
     "vue-cli-plugin-vuetify": "^2.4.6"
   },
   "browserslist": [
